# podflow

./: .env.example  .gitignore  config.example.yaml  pyproject.toml
src/podflow/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  state.py
src/podflow/feed/: generator.py  hosting.py  validator.py
src/podflow/metadata/: generator.py  models.py  prompts.py
src/podflow/processing/: audio.py  tags.py  video.py
src/podflow/transcription/: base.py  whisper_api.py  whisper_local.py
src/podflow/upload/: auth.py  youtube.py
src/podflow/utils/: logging.py  paths.py  time_format.py
tests/: test_cli.py  test_config.py  test_feed.py  test_metadata_generator.py  test_models.py  test_state.py  test_utils.py
